...
                android:background="@drawable/et_text" />


            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:enabled="false"
                android:background="@drawable/send"
                android:id="@+id/send_messsage_btn"
                android:layout_margin="10dp"/>



...
