<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.mainFeatures.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/profile_image_display"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Name: "
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/textViewFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Name: "
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/textViewLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student ID: "
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/textViewStudentID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/editTextStudentID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Student ID"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Status: "
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/editTextStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Status"
                android:visibility="invisible"/>
        </LinearLayout>
        <!-- Add more TextViews for other user info (Last Name, Student ID, Email, Profession, etc.) -->

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Save Changes"/>

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Cancel"/>

        <TextView
            android:id="@+id/invalidBlank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*Field cannot be left blank, changes not saved."
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/invalidStudentID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*Student ID must be 10 numerical digits, changes not saved."
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/invalidStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*Status must be 'Undergraduate Student', 'Graduate Student', 'Faculty', or 'Staff'."
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />


    </LinearLayout>



</FrameLayout>